# WtStat

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Root/: TemplateSet.cxx  Utils.cxx
WtStat/: TemplateSet.h  Utils.h
data/: config.yml  histgen.json  histgen.yml  histgen_withvr.yml  rdfconf.yml  systematics.json  systematics.py
extras/: overlay_pulls.py
graveyard/Root/: TemplateSet.cxx
graveyard/util/: wt-stat-hist-gen.cxx
python/: __init__.py  _css.py  extras.py  fitgen.py  ntuple_fitgen.py  ntuple_trex.py  ntuple_utils.py  rdf_builder.py  sorting.py  systematics.py  trex.py  trex2html.py  trex_builder.py  utils.py
python/enum/: __init__.py
python/enum_py2/: __init__.py
python/yattag/: __init__.py  doc.py
sandbox/: .gitignore  binscan.py  binscan95.py  grid.py  order.py  overlay_pulls.py  single_conf.py
sandbox/bin_scanning/: binscan.py  extract_best.py
sandbox/plot_utils/: overlay_pulls4.py  trexmpl.py
scripts/: wt-stat  wt-stat-extrema
util/: binselect.py  wt-fit-create-hists.cxx  wt-stat-hist-gen.cxx
